--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=contacts-api
-spring.datasource.url=jdbc:h2:mem:contacts_db
-spring.datasource.driverClassName=org.h2.Driver
 
+# Configuração do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/contacts_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuração do JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Configuração do H2 (para testes)
 spring.h2.console.enabled=true
